# RaschPy

./: .flake8  CITATION.cff  LICENSE  MANIFEST.in  PAIR example.xlsx  PUBLISHING.md  README.md  RaschPy to do list.rtf  __init__.py  edge_case_tests_mfrm.py  edge_case_tests_pcm_rsm.py  edge_case_tests_slm.py  priority_list.txt  pyproject.toml  regression_tests_mfrm.py  regression_tests_slm_pcm_rsm.py  session_summary_2026_06_15.txt  smoke_tests_mfrm.py  smoke_tests_pcm.py  smoke_tests_rsm.py  smoke_tests_slm.py  validation_res_corr_mfrm.py
.claude/: settings.local.json
Examples/: CPAT simulation study.ipynb  Examples READ ME.txt  Examples Read Me.txt  Extended MFRM evaluation study.ipynb  Matrix MFRM example.ipynb  PAIR example.xlsx  SLM_Sim.ipynb  __init__.py  mfrm_global_generating_abilities.csv  rsm_generating_abilities.csv  slm_generating_diffs.csv
Examples/Extended MFRM by item/: Items MFRM example.ipynb  mfrm_items_generating_abilities.csv  mfrm_items_generating_diffs.csv  mfrm_items_generating_severities.csv  mfrm_items_generating_thresholds.csv  mfrm_items_item_loadings.csv  mfrm_items_scores.csv
RaschPy/: __init__.py
RaschPy OLD/: __init__.py
RaschPy ONE FILE/: __init__.py
raschpy/: base.py  loaders.py  mfrm unrefactored.py  mfrm.py  pcm.py  rsm.py  slm.py
raschpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: run_edge_case_tests.py  run_regression_tests.py  run_smoke_tests.py
validation/: check_threshold_ccs_matrix.py  validation_anchor_calibratio.textClipping  validation_anchor_calibration.py  validation_res_corr_slm_pcm_rsm.py  validation_save_stats_residuals.py
(+736 files in other folders)
